--- a/styles.css
+++ b/styles.css
@@ -20,18 +20,18 @@ header {
 }
 
 h1 {
-    font-size: 3em;
+    font-size: 3vw;
     font-weight: 700;
 }
 
 h2 {
     margin: 20px;
-    font-size: 3em;
+    font-size: 2.5vw;
     font-weight: 600;
 }
 
 p {
-    font-size: 1.2em;
+    font-size: 1.5vw;
     margin: 20px;
 }
 
